fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,13 +25,11 @@
     100% { transform: translate(1px, -2px) rotate(-1deg);}
 }
 
-body, * {
-    padding: 0 !important; margin: 0;}
+
 
 #wrapper {
     width:100%; 
-    height: 500px;
-    margin-top:; 
+    height: 500px; 
     }
 
 li {
